@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.1.1 (pending)
 ==========================
 
+- Added serialization for built-in proxy container types
 - Fixed circular buffer push front condition when non-empty
 - Fixed Topology::waitInactive() false positive condition
 - Fixed usage of managed buffers for message back-pressure
